traces/bug_924.txt
examples++-load/msh3.cpp:7090: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/msh3.cpp:7090:1: initialization of callDoLoadInit
7088.   
7089.   // dynamic loading: calling [[file:../src/fflib/InitFunct.hpp::LOADFUNC]] on [[Load_Init]]
7090. > LOADFUNC(Load_Init)
7091.       
7092.   #endif // [[WITH_NO_INIT]]

examples++-load/msh3.cpp:7090:1: call to DoLoadInit
7088.   
7089.   // dynamic loading: calling [[file:../src/fflib/InitFunct.hpp::LOADFUNC]] on [[Load_Init]]
7090. > LOADFUNC(Load_Init)
7091.       
7092.   #endif // [[WITH_NO_INIT]]

examples++-load/msh3.cpp:7090:1: call to addInitFunct
  7088.   
  7089.   // dynamic loading: calling [[file:../src/fflib/InitFunct.hpp::LOADFUNC]] on [[Load_Init]]
  7090. > LOADFUNC(Load_Init)
  7091.       
  7092.   #endif // [[WITH_NO_INIT]]

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
